--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,8 +13,8 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-23.05
+  REPO_BRANCH: 23.05
 
 on:
   workflow_dispatch:
